--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.3.3",
+    "react-native-webview": "9.4.0",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2"
   },
